--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+0.3.1 (unreleasd)
+------------------
+
+* First working public release
+
 0.3 (2012-12-14)
 ------------------
 
