--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,10 @@
 Changelog
 =========
 
-0.3.1 (unreleasd)
+0.3.1 (unreleased)
 ------------------
 
-* First working public release
+* Small release fixes
 
 0.3 (2012-12-14)
 ------------------
