--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,11 +1,10 @@
 Changelog
 =========
 
-y (unreleased)
---------------
+0.3.2 (2012-12-15)
+------------------
 
-- Nothing changed yet.
-
+- Remove y release :P
 
 0.3.1 (2012-12-15)
 ------------------
