--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,10 @@
 Changelog
 =========
 
-0.3.3 (unreleased)
+0.3.3 (2012-12-15)
 ------------------
 
-- Nothing changed yet.
+- Docs cleaned.
 
 
 0.3.2 (2012-12-15)
