--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,39 +4,5 @@ Changelog
 0.3.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
-
-
-0.3.5 (2012-12-15)
-------------------
-
-- Nothing changed yet.
-
-
-0.3.4 (2012-12-15)
-------------------
-
-- Nothing changed yet.
-
-
-0.3.3 (2012-12-15)
-------------------
-
-- Docs cleaned.
-
-
-0.3.2 (2012-12-15)
-------------------
-
-- Remove y release :P
-
-0.3.1 (2012-12-15)
-------------------
-
-* Small release fixes
-
-0.3 (2012-12-14)
-------------------
-
-* First public release
+- First public release
 
